# python-project-config

./: lint.sh  pyproject.toml
