[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = []
requires-python = ">=3.10"
license = {text = ""}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "pyproject-flake8>=6.0.0.post1",
]

[tool.flake8]
    exclude = [".venv", ".git", "__pycache__", "__pypackages__"]
    line-length = 88

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
target-version = ['py311']
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
